[workspace]
members = [
    # core libraries
    "crates/tmc-*",

    # language plugins
    "crates/plugins/*",

    # bindings to other languages
    "crates/bindings/*",

    # test helpers
    "crates/helpers/*",
]
resolver = "2"

[workspace.package]
version = "0.32.0"
authors = [
    "University of Helsinki <mooc@cs.helsinki.fi>",
    "Daniel Martinez <daniel.x.martinez@helsinki.fi>",
]
edition = "2021"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tmc-testmycode-client = { path = "crates/tmc-testmycode-client" }
tmc-mooc-client = { path = "crates/tmc-mooc-client" }
tmc-langs = { path = "crates/tmc-langs" }
tmc-langs-framework = { path = "crates/tmc-langs-framework" }
tmc-langs-plugins = { path = "crates/tmc-langs-plugins" }
tmc-langs-util = { path = "crates/tmc-langs-util" }
tmc-langs-csharp = { path = "crates/plugins/csharp" }
tmc-langs-java = { path = "crates/plugins/java" }
tmc-langs-make = { path = "crates/plugins/make" }
tmc-langs-notests = { path = "crates/plugins/notests" }
tmc-langs-python3 = { path = "crates/plugins/python3" }
tmc-langs-r = { path = "crates/plugins/r" }
tmc-server-mock = { path = "crates/helpers/tmc-server-mock" }
ts-rs = { git = "https://github.com/Heliozoa/ts-rs.git", rev = "6a7866228b008bab4bb03604fb404193fcbe7f74" }

[patch.'https://github.com/Heliozoa/ts-rs.git']
ts-rs = { path = "../ts-rs/ts-rs" }

[patch.'https://github.com/rage/secret-project-331.git']
mooc-langs-api = { path = "../secret-project-331/services/headless-lms/langs-api" }
