[workspace]
members = [
  # core libraries
  "crates/tmc-*",

  # language plugins
  "crates/plugins/*",

  # bindings to other languages
  "crates/bindings/*",

  # test helpers
  "crates/helpers/*",
]
resolver = "2"

[workspace.package]
authors = [
  "University of Helsinki <mooc@cs.helsinki.fi>",
  "Daniel Martinez <daniel.x.martinez@helsinki.fi>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"
version = "0.34.1"

[workspace.dependencies]
mooc-langs-api = { git = "https://github.com/rage/secret-project-331.git", rev = "778a5820a8b7422cbf9f1c786da437833ced5ae9" }
tmc-langs = { path = "crates/tmc-langs" }
tmc-langs-csharp = { path = "crates/plugins/csharp" }
tmc-langs-framework = { path = "crates/tmc-langs-framework" }
tmc-langs-java = { path = "crates/plugins/java" }
tmc-langs-make = { path = "crates/plugins/make" }
tmc-langs-notests = { path = "crates/plugins/notests" }
tmc-langs-plugins = { path = "crates/tmc-langs-plugins" }
tmc-langs-python3 = { path = "crates/plugins/python3" }
tmc-langs-r = { path = "crates/plugins/r" }
tmc-langs-util = { path = "crates/tmc-langs-util" }
tmc-mooc-client = { path = "crates/tmc-mooc-client" }
tmc-server-mock = { path = "crates/helpers/tmc-server-mock" }
tmc-testmycode-client = { path = "crates/tmc-testmycode-client" }
ts-rs = { git = "https://github.com/Heliozoa/ts-rs.git", rev = "272301ad9d63ae27fb86c225afffbf60f626527b" }

# [patch.'https://github.com/Heliozoa/ts-rs.git']
# ts-rs = { path = "../ts-rs/ts-rs" }

# [patch.'https://github.com/rage/secret-project-331.git']
# mooc-langs-api = { path = "../secret-project-331/services/headless-lms/langs-api" }
