[workspace]
members = [
  # core libraries
  "crates/tmc-*",

  # language plugins
  "crates/plugins/*",

  # test helpers
  "crates/helpers/*",
]
resolver = "2"

[workspace.package]
authors = [
  "University of Helsinki <mooc@cs.helsinki.fi>",
  "Daniel Martinez <daniel.x.martinez@helsinki.fi>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
version = "0.39.4"

[workspace.dependencies]
mooc-langs-api = { git = "https://github.com/rage/secret-project-331.git", rev = "24179d597e5f4120649be50b903a9a4e544ea77c" }
tmc-langs = { path = "crates/tmc-langs" }
tmc-langs-csharp = { path = "crates/plugins/csharp" }
tmc-langs-framework = { path = "crates/tmc-langs-framework" }
tmc-langs-java = { path = "crates/plugins/java" }
tmc-langs-make = { path = "crates/plugins/make" }
tmc-langs-notests = { path = "crates/plugins/notests" }
tmc-langs-plugins = { path = "crates/tmc-langs-plugins" }
tmc-langs-python3 = { path = "crates/plugins/python3" }
tmc-langs-r = { path = "crates/plugins/r" }
tmc-langs-util = { path = "crates/tmc-langs-util" }
tmc-mooc-client = { path = "crates/tmc-mooc-client" }
tmc-server-mock = { path = "crates/helpers/tmc-server-mock" }
tmc-testmycode-client = { path = "crates/tmc-testmycode-client" }
ts-rs = { git = "https://github.com/Heliozoa/ts-rs.git", rev = "769feca36b46854ee9a8660a1d8e18938763ba66" }

# [patch.'https://github.com/Heliozoa/ts-rs.git']
# ts-rs = { path = "../ts-rs/ts-rs" }

# [patch.'https://github.com/rage/secret-project-331.git']
# mooc-langs-api = { path = "../secret-project-331/services/headless-lms/langs-api" }
