[package]
name = "tmc-client"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
tmc-langs-plugins = { path = "../tmc-langs-plugins" }
tmc-langs-util = { path = "../tmc-langs-util" }

chrono = { version = "0.4", features = ["serde"] }
dirs = "4"
http = "0.2"
log = "0.4"
oauth2 = { version = "4", features = ["reqwest"] }
once_cell = "1"
percent-encoding = "2"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs/", rev = "83650073943c33ccab7c80db3e9d748941773333", optional = true }
url = "2"
walkdir = "2"

[dev-dependencies]
dotenv = "0.15"
mockito = "0.30"
simple_logger = "1"

[features]
ts = ["ts-rs"]
