[package]
name = "tmc-client"
version = "0.1.0"
authors = [
    "University of Helsinki <mooc@cs.helsinki.fi>",
    "Daniel Martinez <daniel.x.martinez@helsinki.fi>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.58.1"

[dependencies]
tmc-langs-plugins = { path = "../tmc-langs-plugins" }
tmc-langs-util = { path = "../tmc-langs-util" }

chrono = { version = "0.4.19", features = ["serde"] }
dirs = "4.0.0"
http = "0.2.6"
log = "0.4.14"
oauth2 = { version = "4.1.0", features = ["reqwest"] }
once_cell = "1.9.0"
percent-encoding = "2.1.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "multipart",
] }
schemars = { version = "0.8.8", features = ["chrono"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tempfile = "3.3.0"
thiserror = "1.0.30"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs/", features = [
    "serde-compat",
], rev = "71bba3a18cdc5bc02c63b2772fd5324b1b07227b", optional = true }
url = "2.2.2"
walkdir = "2.3.2"

[dev-dependencies]
dotenv = "0.15.0"
mockito = "0.31.0"
simple_logger = "2.1.0"

[features]
ts = ["ts-rs"]
