[package]
name = "tmc-langs-cli"
version = "0.11.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
description = "CLI client for TMC"
license = "MIT OR Apache-2.0"

[dependencies]
tmc-client = { path = "../tmc-client" }
tmc-langs-framework = { path = "../tmc-langs-framework" }
tmc-langs-util = { path = "../tmc-langs-util" }

anyhow = "1"
base64 = "0.13"
clap = "2"
dirs = "3"
env_logger = "0.8"
log = "0.4"
quit = "1"
rpassword = "5"
schemars = "0.8"
serde = "1"
serde_json = "1"
smol = "1"
tempfile = "3"
thiserror = "1"
toml = "0.5"
url = "2"
walkdir = "2"

[dev-dependencies]
dotenv = "0.15"
simple_logger = "1"
tempfile = "3"
