[package]
name = "tmc-langs-cli"
version = "0.10.0.4"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
description = "CLI client for TMC"
license = "MIT OR Apache-2.0"

[dependencies]
tmc-client = { path = "../tmc-client" }
tmc-langs-framework = { path = "../tmc-langs-framework" }
tmc-langs-util = { path = "../tmc-langs-util" }
clap = "2"
walkdir = "2"
serde_json = "1"
env_logger = "0.8"
log = "0.4"
rpassword = "5"
url = "2"
serde = "1"
anyhow = "1"
quit = "1"
dirs = "3"
tempfile = "3"
base64 = "0.13"
schemars = "0.8"
thiserror = "1"
toml = "0.5"
heim = { version = "0.1.0-beta.3", features = ["disk"] }
smol = "1"

[dev-dependencies]
tempfile = "3"
dotenv = "0.15"
simple_logger = "1"
