[package]
name = "tmc-langs-cli"
version = "0.26.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
description = "CLI client for TMC"
license = "MIT OR Apache-2.0"
rust-version = "1.58.1"
default-run = "tmc-langs-cli"

[dependencies]
tmc-langs = { path = "../tmc-langs" }
tmc-langs-util = { path = "../tmc-langs-util" }

anyhow = "1.0.53"
base64 = "0.13.0"
clap = { version = "3.0.14", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.14"
quit = "1.1.4"
rpassword = "7.0.0"
schemars = "0.8.8"
serde = "1.0.136"
serde_json = "1.0.78"
smol = "1.2.5"
structopt = "0.3.26"
tempfile = "3.3.0"
thiserror = "1.0.30"
toml = "0.5.8"
url = "2.2.2"
walkdir = "2.3.2"

[dev-dependencies]
simple_logger = "2.1.0"
tempfile = "3.3.0"
