[package]
name = "tmc-langs-core"
version = "0.1.0"
authors = ["Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"

[dependencies]
tmc-langs-util = { path = "../tmc-langs-util" }
reqwest = { version = "0.10", default-features = false, features = ["blocking", "json", "rustls-tls"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
http = "0.2"
url = "2"
log = "0.4"
oauth2 = "4.0.0-alpha.1"
tempfile = "3"
dirs = "2"
regex = "1"
lazy_static = "1"
percent-encoding = "2"
serde_json = "1"

[dev-dependencies]
env_logger = "0.7"
mockito = "0.25"
dotenv = "0.15"
