[package]
name = "tmc-langs-csharp"
version = "0.1.0"
authors = ["Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"

[dependencies]
tmc-langs-framework = { path = "../tmc-langs-framework" }
walkdir = "2"
dirs = "3"
thiserror = "1"
serde_json = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
env_logger = "0.7"
