[package]
name = "tmc-langs-framework"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
tmc-langs-util = { path = "../tmc-langs-util" }

fd-lock = "3"
isolang = "2"
log = "0.4"
nom = { version = "7", features = ["alloc"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
schemars = "0.8"
subprocess = "0.2"
tempfile = "3"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs/", rev = "83650073943c33ccab7c80db3e9d748941773333", optional = true }
thiserror = "1"
walkdir = "2"
zip = "0.5"

[dev-dependencies]
simple_logger = "1"
tempfile = "3"

[features]
ts = ["ts-rs"]
