[package]
name = "tmc-langs-framework"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"
rust-version = "1.58.1"

[dependencies]
tmc-langs-util = { path = "../tmc-langs-util" }

fd-lock = "3.0.3"
isolang = "2.1.0"
log = "0.4.14"
nom = { version = "7.1.0", features = ["alloc"] }
once_cell = "1.9.0"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
schemars = "0.8.8"
subprocess = "0.2.8"
tempfile = "3.3.0"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs/", rev = "83650073943c33ccab7c80db3e9d748941773333", optional = true }
thiserror = "1.0.30"
walkdir = "2.3.2"
zip = "0.5.13"

[dev-dependencies]
simple_logger = "2.1.0"
tempfile = "3.3.0"

[features]
ts = ["ts-rs"]
