[package]
name = "tmc-langs-java"
version = "0.1.0"
authors = ["Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"

[dependencies]
tmc-langs-abstraction = { path = "../tmc-langs-abstraction" }
tmc-langs-framework = { path = "../tmc-langs-framework" }
isolang = "1"
log = "0.4"
walkdir = "2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
j4rs = "0.11.2" # specific version just in case it's necessary to match the jar
tempfile = "3"
lazy_static = "1"
dirs = "2"

[dev-dependencies]
env_logger = "0.7"
