[package]
name = "tmc-langs-make"
version = "0.1.0"
authors = ["Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"

[dependencies]
tmc-langs-framework = { path = "../tmc-langs-framework" }
log = "0.4"
thiserror = "1"
regex = "1"
lazy_static = "1"
serde-xml-rs = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
env_logger = "0.7"
walkdir = "2"
tempfile = "3"
