[package]
name = "tmc-langs-notests"
version = "0.1.0"
authors = ["Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmc-langs-framework = { path = "../tmc-langs-framework" }
log = "0.4"

[dev-dependencies]
env_logger = "0.7"
