[package]
name = "tmc-langs-plugins"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.58.1"

[dependencies]
tmc-langs-framework = { path = "../tmc-langs-framework" }
tmc-langs-util = { path = "../tmc-langs-util" }

tmc-langs-csharp = { path = "../plugins/csharp" }
tmc-langs-java = { path = "../plugins/java" }
tmc-langs-make = { path = "../plugins/make" }
tmc-langs-notests = { path = "../plugins/notests" }
tmc-langs-python3 = { path = "../plugins/python3" }
tmc-langs-r = { path = "../plugins/r" }

impl-enum = "0.2.0"
log = "0.4.14"
thiserror = "1.0.30"
walkdir = "2.3.2"
zip = "0.5.13"

[dev-dependencies]
simple_logger = "2.1.0"
tempfile = "3.3.0"
