[package]
name = "tmc-langs-plugins"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tmc-langs-framework = { path = "../tmc-langs-framework" }
tmc-langs-util = { path = "../tmc-langs-util" }

tmc-langs-csharp = { path = "../plugins/csharp" }
tmc-langs-java = { path = "../plugins/java" }
tmc-langs-make = { path = "../plugins/make" }
tmc-langs-notests = { path = "../plugins/notests" }
tmc-langs-python3 = { path = "../plugins/python3" }
tmc-langs-r = { path = "../plugins/r" }

impl-enum = "0.3.0"
log = "0.4.14"
tar = "0.4.38"
thiserror = "1.0.30"
walkdir = "2.3.2"
zip = { git = "https://github.com/zip-rs/zip.git", rev = "bb230ef56adc13436d1fcdfaa489249d119c498f" } # use from git until zip releases a version with zstd 0.11
zstd = "0.11.2"

[dev-dependencies]
simple_logger = "2.1.0"
tempfile = "3.3.0"
