[package]
name = "tmc-langs-python3"
version = "0.1.0"
authors = ["Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"

[dependencies]
tmc-langs-framework = { path = "../tmc-langs-framework" }
lazy_static = "1"
log = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1"
walkdir = "2"

[dev-dependencies]
env_logger = "0.7"
tempfile = "3"
