[package]
name = "tmc-langs-util"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
fd-lock = "2"
heim = { version = "0.1.0-beta.3", features = ["disk"] }
lazy_static = "1"
log = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
smol = "1"
tempfile = "3"
thiserror = "1"
type-map = "0.5"
walkdir = "2"
zip = "0.5"

[target.'cfg(unix)'.dependencies]
nix = "0.20"

[dev-dependencies]
simple_logger = "1"
