[package]
name = "tmc-langs-util"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
fd-lock = "3"
log = "0.4"
nom = "7"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"
type-map = "0.5"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
simple_logger = "1"
