[package]
name = "tmc-langs-util"
version = "0.1.0"
authors = [
    "University of Helsinki <mooc@cs.helsinki.fi>",
    "Daniel Martinez <daniel.x.martinez@helsinki.fi>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.58.1"

[dependencies]
fd-lock = "3.0.3"
log = "0.4.14"
nom = "7.1.0"
once_cell = "1.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_path_to_error = "0.1.7"
serde_yaml = "0.9.10"
tempfile = "3.3.0"
thiserror = "1.0.30"
toml = "0.5.8"
type-map = "0.5.0"
walkdir = "2.3.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
simple_logger = "2.1.0"
