[package]
name = "tmc-langs"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
tmc-client = { path = "../tmc-client" }
tmc-langs-plugins = { path = "../tmc-langs-plugins" }
tmc-langs-framework = { path = "../tmc-langs-framework" }
tmc-langs-util = { path = "../tmc-langs-util" }

base64 = "0.13"
dirs = "3"
# heim = { version = "0.1.0-beta.3", features = ["disk"] }
hmac = { version = "0.10", features = ["std"] }
impl-enum = "0.2"
jwt = "0.13"
log = "0.4"
lazy_static = "1"
md5 = "0.7"
oauth2 = { version = "4.0.0-beta.1", features = ["reqwest"] }
regex = "1"
rpassword = "5"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
sha2 = "0.9"
shellwords = "1"
smol = "1"
tar = "0.4"
tempfile = "3"
thiserror = "1"
toml = "0.5"
url = "2"
walkdir = "2"
zip = "0.5"
zstd = "0.6"

[target.'cfg(unix)'.dependencies]
nix = "0.20"

[dev-dependencies]
chrono = "0.4"
mockito = "0.30"
simple_logger = "1"
tempfile = "3"
