[package]
name = "tmc-langs"
version = "0.24.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
description = "Library for TMC"
license = "MIT OR Apache-2.0"
rust-version = "1.58.1"

[dependencies]
tmc-client = { path = "../tmc-client" }
tmc-langs-plugins = { path = "../tmc-langs-plugins" }
tmc-langs-framework = { path = "../tmc-langs-framework" }
tmc-langs-util = { path = "../tmc-langs-util" }

base64 = "0.13.0"
dirs = "4.0.0"
# heim = { version = "0.1.0-beta.3", features = ["disk"] }
hmac = { version = "0.12.0", features = ["std"] }
impl-enum = "0.2.0"
jwt = "0.16.0"
log = "0.4.14"
md5 = "0.7.0"
oauth2 = { version = "4.0.0-beta.1", features = ["reqwest"] }
once_cell = "1.9.0"
regex = "1.5.4"
rpassword = "6.0.1"
schemars = "0.8.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.8.23"
sha2 = "0.10.1"
shellwords = "1.1.0"
smol = "1.2.5"
tar = "0.4.38"
tempfile = "3.3.0"
thiserror = "1.0.30"
toml = "0.5.8"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs/", features = ["serde-compat"], rev = "71bba3a18cdc5bc02c63b2772fd5324b1b07227b", optional = true }
url = "2.2.2"
walkdir = "2.3.2"
zip = "0.6.2"
zstd = "0.10.0"  # zip 0.6 is still on 0.10

[target.'cfg(unix)'.dependencies]
nix = "0.23.1"

[dev-dependencies]
chrono = "0.4.19"
mockito = "0.31.0"
simple_logger = "2.1.0"
tempfile = "3.3.0"

[features]
ts = ["ts-rs", "tmc-client/ts", "tmc-langs-framework/ts"]
