[package]
name = "tmc-langs-node"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "default-panic-hook"]

[dependencies]
tmc-langs = { path = "../../tmc-langs", features = ["ts"] }

base64 = "0.13"
env_logger = "0.9"
serde = "1"
serde_json = "1"
thiserror = "1"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs/", rev = "83650073943c33ccab7c80db3e9d748941773333" }

[dev-dependencies]
log = "0.4"
once_cell = "1"
simple_logger = "2"
tmc-server-mock = { path = "../../tmc-server-mock" }
