[package]
name = "tmc-langs-node"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.10.0"
default-features = false
features = ["napi-6", "default-panic-hook"]

[dependencies]
tmc-langs = { path = "../../tmc-langs", features = ["ts"] }

base64 = "0.13.0"
env_logger = "0.9.0"
serde = "1.0.136"
serde_json = "1.0.78"
thiserror = "1.0.30"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs/", rev = "83650073943c33ccab7c80db3e9d748941773333" }

[dev-dependencies]
log = "0.4.14"
once_cell = "1.9.0"
simple_logger = "2.1.0"
tmc-server-mock = { path = "../../tmc-server-mock" }
