[package]
name = "tmc-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tmc-langs-plugins.workspace = true
tmc-langs-util.workspace = true

chrono = { version = "0.4.19", features = ["serde"] }
dirs = "4.0.0"
http = "0.2.6"
log = "0.4.14"
oauth2 = { version = "4.1.0", features = ["reqwest"] }
once_cell = "1.9.0"
percent-encoding = "2.1.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "multipart",
] }
schemars = { version = "0.8.8", features = ["chrono"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tempfile = "3.3.0"
thiserror = "1.0.30"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs.git", rev = "d1eeeabc857b824f3cdaec97270c33d3cf0eda35", features = [
    "serde-compat",
], optional = true }
url = "2.2.2"
walkdir = "2.3.2"

[dev-dependencies]
dotenv = "0.15.0"
mockito = "0.31.0"
simple_logger = "3.0.0"

[features]
ts-rs = ["dep:ts-rs", "tmc-langs-util/ts-rs"]
