[package]
name = "tmc-langs-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLI client for TMC"
license.workspace = true
rust-version.workspace = true
default-run = "tmc-langs-cli"

[dependencies]
tmc-langs.workspace = true
tmc-langs-util.workspace = true

anyhow = { version = "1.0.53", features = ["backtrace"] }
base64 = "0.21.0"
clap = { version = "4.0.7", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.10.0"
log = "0.4.14"
rpassword = "7.0.0"
schemars = "0.8.8"
serde = "1.0.136"
serde_json = "1.0.78"
tempfile = "3.3.0"
thiserror = "1.0.30"
toml = "0.7.2"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs.git", rev = "6a7866228b008bab4bb03604fb404193fcbe7f74", features = [
    "serde-compat",
], optional = true }
url = "2.2.2"
walkdir = "2.3.2"

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml", "glob", "filters"] }
simple_logger = "4.0.0"
tempfile = "3.3.0"

[features]
ts-rs = ["dep:ts-rs", "tmc-langs/ts-rs", "tmc-langs-util/ts-rs"]
