[package]
name = "tmc-langs-framework"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tmc-langs-util.workspace = true

fd-lock = "3.0.3"
isolang = "2.1.0"
log = "0.4.14"
nom = { version = "7.1.0", features = ["alloc"] }
once_cell = "1.9.0"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.9.10"
schemars = "0.8.8"
subprocess = "0.2.8"
tar = "0.4.38"
tempfile = "3.3.0"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs.git", rev = "7869099baa0fbeb155792ac986dbfc4c6d94136a", features = [
    "serde-compat",
], optional = true }
thiserror = "1.0.30"
walkdir = "2.3.2"
zip = "0.6.3"
zstd = "0.11.2"

[dev-dependencies]
simple_logger = "3.0.0"
tempfile = "3.3.0"

[features]
ts-rs = ["dep:ts-rs", "tmc-langs-util/ts-rs"]
