[package]
name = "tmc-langs-framework"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tmc-langs-util.workspace = true
ts-rs = { workspace = true, features = ["serde-compat"], optional = true }

blake3 = "1.4.0"
fd-lock = "4.0.0"
isolang = "2.1.0"
log = "0.4.14"
nom = { version = "8.0.0", features = ["alloc"] }
nom-language = "0.1.0"
once_cell = "1.9.0"
regex = "1.10.6"
schemars = "1.0.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.9.10"
subprocess = "0.2.8"
tar = "0.4.38"
tempfile = "3.3.0"
thiserror = "2.0.3"
walkdir = "2.3.2"
zip = "4.1.0"
zstd = "0.13.0"

[dev-dependencies]
simple_logger = "5.0.0"
tempfile = "3.3.0"

[features]
ts-rs = ["dep:ts-rs", "tmc-langs-util/ts-rs"]
