[package]
name = "tmc-langs-plugins"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tmc-langs-framework.workspace = true
tmc-langs-util.workspace = true

tmc-langs-csharp.workspace = true
tmc-langs-java.workspace = true
tmc-langs-make.workspace = true
tmc-langs-notests.workspace = true
tmc-langs-python3.workspace = true
tmc-langs-r.workspace = true

impl-enum = "0.3.0"
log = "0.4.14"
tar = "0.4.38"
thiserror = "1.0.30"
walkdir = "2.3.2"
zip = "0.6.3"
zstd = "0.11.2"

[dev-dependencies]
simple_logger = "3.0.0"
tempfile = "3.3.0"
