[package]
name = "tmc-langs-plugins"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tmc-langs-framework.workspace = true
tmc-langs-util.workspace = true

tmc-langs-csharp.workspace = true
tmc-langs-make.workspace = true
tmc-langs-notests.workspace = true
tmc-langs-python3.workspace = true
tmc-langs-r.workspace = true

blake3 = "1.4.0"
log = "0.4.14"
tar = "0.4.38"
thiserror = "2.0.3"
walkdir = "2.3.2"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
zstd = "0.13.0"

# The Java plugin causes compilation to fail on musl
[target.'cfg(not(target_env = "musl"))'.dependencies]
tmc-langs-java.workspace = true

[dev-dependencies]
simple_logger = "5.0.0"
tempfile = "3.3.0"
