[package]
name = "tmc-langs-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ts-rs = { workspace = true, features = ["serde-compat"], optional = true }

dunce = "1.0.3"
fd-lock = "4.0.0"
log = "0.4.14"
nom = "7.1.0"
once_cell = "1.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_path_to_error = "0.1.7"
serde_yaml = "0.9.10"
tempfile = "3.3.0"
thiserror = "1.0.30"
toml = "0.8.2"
type-map = "0.5.0"
walkdir = "2.3.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
simple_logger = "4.0.0"
