[package]
name = "tmc-langs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tmc-client.workspace = true
tmc-langs-plugins.workspace = true
tmc-langs-framework.workspace = true
tmc-langs-util.workspace = true

base64 = "0.21.0"
dirs = "4.0.0"
# heim = { version = "0.1.0-beta.3", features = ["disk"] }
hmac = { version = "0.12.0", features = ["std"] }
impl-enum = "0.3.0"
jwt = "0.16.0"
log = "0.4.14"
md5 = "0.7.0"
oauth2 = { version = "4.0.0-beta.1", features = ["reqwest"] }
once_cell = "1.9.0"
regex = "1.5.4"
schemars = "0.8.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.9.10"
sha2 = "0.10.1"
shellwords = "1.1.0"
tar = "0.4.38"
tempfile = "3.3.0"
thiserror = "1.0.30"
toml = "0.7.2"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs.git", rev = "6a7866228b008bab4bb03604fb404193fcbe7f74", features = [
    "serde-compat",
    "toml-impl",
], optional = true }
url = "2.2.2"
walkdir = "2.3.2"
zip = "0.6.3"
zstd = "0.12.3"

[target.'cfg(unix)'.dependencies]
nix = "0.26.2"

[dev-dependencies]
chrono = "0.4.19"
mockito = "0.32.0"
simple_logger = "4.0.0"
tempfile = "3.3.0"

[features]
ts-rs = [
    "dep:ts-rs",
    "tmc-client/ts-rs",
    "tmc-langs-framework/ts-rs",
    "tmc-langs-util/ts-rs",
]
