[package]
name = "tmc-langs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tmc-langs-framework.workspace = true
tmc-langs-plugins.workspace = true
tmc-langs-util.workspace = true
tmc-mooc-client.workspace = true
tmc-testmycode-client.workspace = true
ts-rs = { workspace = true, features = [
  "serde-compat",
  "toml-impl",
], optional = true }

base64 = "0.22.0"
blake3 = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
dirs = "6.0.0"
hmac = { version = "0.12.0", features = ["std"] }
jwt = "0.16.0"
log = "0.4.14"
md5 = "0.8.0"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
once_cell = "1.9.0"
regex = "1.10.6"
schemars = "1.0.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.9.10"
sha2 = "0.10.1"
shellwords = "1.1.0"
tar = "0.4.38"
tempfile = "3.3.0"
thiserror = "2.0.3"
toml = "0.9.2"
url = "2.2.2"
uuid = { version = "1.3.4", features = ["v4"] }
walkdir = "2.3.2"
zip = { version = "4.5.0", default-features = false, features = ["deflate"] }
zstd = "0.13.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.0", features = ["fs"] }

[dev-dependencies]
chrono = "0.4.19"
mockito = "1.0.2"
simple_logger = "5.0.0"
tempfile = "3.3.0"

[features]
ts-rs = [
  "dep:ts-rs",
  "tmc-testmycode-client/ts-rs",
  "tmc-langs-framework/ts-rs",
  "tmc-langs-util/ts-rs",
  "tmc-mooc-client/ts-rs",
]
