[package]
name = "tmc-mooc-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mooc-langs-api = { git = "https://github.com/rage/secret-project-331.git", branch = "langs-api" }

bytes = "1.4.0"
log = "0.4.18"
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart", "cookies"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["serde", "v4"] }

[dev-dependencies]
simple_logger = "4.0.0"
