[package]
name = "tmc-mooc-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mooc-langs-api.workspace = true
tmc-langs-util.workspace = true

bytes = "1.4.0"
chrono = "0.4.26"
log = "0.4.18"
oauth2 = "4.4.2"
reqwest = { version = "0.11.27", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
  "multipart",
  "cookies",
] }
schemars = { version = "0.8.8", features = ["uuid1"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "2.0.3"
ts-rs = { workspace = true, features = [
  "chrono-impl",
  "serde-compat",
  "serde-json-impl",
  "uuid-impl",
], optional = true }
uuid = { version = "1.3.3", features = ["serde", "v4"] }

[dev-dependencies]
simple_logger = "5.0.0"

[features]
ts-rs = ["dep:ts-rs"]
